terraform/sg_alb.tf
resource "aws_security_group" "alb-sg" {
  name        = "ALB Security Group"
  description = "Allow incoming HTTP/HTTPS traffic for ALB"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    name    = "alb-sg",
    Project = "${var.project_name}"
  }
}
